--- a/css/variables.css
+++ b/css/variables.css
@@ -7,6 +7,7 @@
     --color-6: #347EFB;
     --color-7: #CAC9C9;
     --color-8: #878787;
+    --color-9: #FFFFFF;
 }
 @font-face {
     font-family: "EncodeSans-Regular";
