--- a/views/home.html
+++ b/views/home.html
@@ -13,7 +13,7 @@
             <h1>Hello, Welcome 👋</h1>
             <h3>Sneyder Rueda</h3>
         </div>
-        <img src="#" alt="Profile-photo"> <!-- Falta subir una foto mia-->
+        <img src="../storage/img/profile-photo.jpg" alt="Profile-photo"> <!-- Centrar la foto -->
     </header>
     <nav class="nav__search">
         <form class="form__search" action="?" method="get">
