--- a/css/variables.css
+++ b/css/variables.css
@@ -8,6 +8,8 @@
     --color-7: #CAC9C9;
     --color-8: #878787;
     --color-9: #FFFFFF;
+    --color-10: #DFDEDE;
+    --color-11: #FDFDFD;
 }
 @font-face {
     font-family: "EncodeSans-Regular";
