--- a/views/home.html
+++ b/views/home.html
@@ -25,7 +25,7 @@
             </div>
         </form>
         <ul class="nav__category">
-            <li class="select"><a href="#">All Items</a></li>
+            <li class="select"><a href="#"><img src="../storage/img/category.png" alt="categories">All Items</a></li>
             <li><a href="#"><img src="../storage/img/dress.png" alt="Dress">Dress</a></li>
             <li><a href="#"><img src="../storage/img/tshirt.png" alt="T-Shirt">T-Shirt</a></li>
             <li><a href="#"><img src="../storage/img/jeans.png" alt="Jean">Jeans</a></li>
