--- a/views/home.html
+++ b/views/home.html
@@ -35,13 +35,9 @@
         <section class="section__products">
             <article class="article__contain">
                 <a href="#"><img src="../storage/img/camisa-h-01.jpg"></a>
-                <!-- Posible code para el corazon de favoritos -->
-                <!-- <div>
-                    <a href="#"><img src="../storage/img/camisa-h-01.jpg"></a>
-                    <div>
-                        <img src="../storage/img/heart.png" alt="Heart">
-                    </div>
-                </div> -->
+                <div class="contain__heart">
+                    <img src="../storage/img/heart-empty.png" alt="Heart">
+                </div>
                 <div class="div__info">
                     <strong>Basic White T-Shirt</strong>
                     <p>T-Shirt modern</p>
@@ -56,6 +52,9 @@
             </article>
             <article class="article__contain">
                 <a href="#"><img src="../storage/img/vestido-01.jpg"></a>
+                <div class="contain__heart">
+                    <img src="../storage/img/heart-full.png" alt="Heart">
+                </div>
                 <div class="div__info">
                     <strong>Blue King Dress</strong>
                     <p>Dress elegant</p>
@@ -71,6 +70,9 @@
             </article>
             <article class="article__contain">
                 <a href="#"><img src="../storage/img/pantalon-m-01.jpg"></a>
+                <div class="contain__heart">
+                    <img src="../storage/img/heart-empty.png" alt="Heart">
+                </div>
                 <div class="div__info">
                     <strong>Rose Pant</strong>
                     <p>Pant casual</p>
@@ -85,6 +87,9 @@
             </article>
             <article class="article__contain">
                 <a href="#"><img src="../storage/img/camisa-h-02.jpg"></a>
+                <div class="contain__heart">
+                    <img src="../storage/img/heart-empty.png" alt="Heart">
+                </div>
                 <div class="div__info">
                     <strong>Rose Pant</strong>
                     <p>Pant casual</p>
