feat: :lipstick: Home terminado
Se ha puesto el footer-nav y el nav sticky

--- a/css/variables.css
+++ b/css/variables.css
@@ -10,6 +10,7 @@
     --color-9: #FFFFFF;
     --color-10: #DFDEDE;
     --color-11: #FDFDFD;
+    --color-12: #FFFFFF05;
 }
 @font-face {
     font-family: "EncodeSans-Regular";
