--- a/views/home.html
+++ b/views/home.html
@@ -24,14 +24,21 @@
                 <input type="submit" value="">
             </div>
         </form>
+        <!-- Para que sea sticky el ul toca pasarlo al main -->
+        <!-- <ul class="nav__category">
+            <li class="select"><a href="#"><img src="../storage/img/category-white.png" alt="categories">All Items</a></li>
+            <li><a href="#"><img src="../storage/img/dress.png" alt="Dress">Dress</a></li>
+            <li><a href="#"><img src="../storage/img/tshirt.png" alt="T-Shirt">T-Shirt</a></li>
+            <li><a href="#"><img src="../storage/img/jeans.png" alt="Jean">Jeans</a></li>
+        </ul> -->
+    </nav>
+    <main>
         <ul class="nav__category">
             <li class="select"><a href="#"><img src="../storage/img/category-white.png" alt="categories">All Items</a></li>
             <li><a href="#"><img src="../storage/img/dress.png" alt="Dress">Dress</a></li>
             <li><a href="#"><img src="../storage/img/tshirt.png" alt="T-Shirt">T-Shirt</a></li>
             <li><a href="#"><img src="../storage/img/jeans.png" alt="Jean">Jeans</a></li>
         </ul>
-    </nav>
-    <main>
         <section class="section__products">
             <article class="article__contain">
                 <a href="#"><img src="../storage/img/camisa-h-01.jpg"></a>
@@ -103,14 +110,20 @@
                 </div>
             </article>
         </section>
-    </main>
-    <footer>
-        <div>
+        <div class="footer__nav">
             <a href="#"><img src="../storage/img/home.png" alt="Home"></a>
             <a href="#"><img src="../storage/img/shopping-bag.png" alt="shopping-bag"></a>
             <a href="#"><img src="../storage/img/heart-nav.png" alt="Heart"></a>
             <a href="#"><img src="../storage/img/profile.png" alt="Profile"></a>
         </div>
+    </main>
+    <footer>
+        <!-- <div class="footer__nav">
+            <a href="#"><img src="../storage/img/home.png" alt="Home"></a>
+            <a href="#"><img src="../storage/img/shopping-bag.png" alt="shopping-bag"></a>
+            <a href="#"><img src="../storage/img/heart-nav.png" alt="Heart"></a>
+            <a href="#"><img src="../storage/img/profile.png" alt="Profile"></a>
+        </div> -->
     </footer>
 </body>
 </html>
