--- a/css/home.css
+++ b/css/home.css
@@ -111,10 +111,13 @@ ul{
     /* display: flex; */
 }
 .nav__category {
-    /* background-color: gainsboro; */
+    /* background-color: var(--color-9); Activar esta opción para un fondo */
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    position: sticky;
+    top: 0;
+    z-index: 100;
     gap: 16px;
     margin-bottom: 24px;
     /* width: 87.2vw; No es necesario por el width del padre */
@@ -122,7 +125,7 @@ ul{
     overflow-x: scroll;
 }
 .nav__category li{
-    /* background: rgba(95, 158, 160, 0.288); */
+    background: var(--color-9);
     position: relative;
     display: flex;
     align-items: center;
@@ -171,6 +174,7 @@ section{
     align-items: center;
     justify-content: space-between;
     gap: 24px 17px;
+    padding-bottom: 32px;
 }
 article{
 
@@ -242,4 +246,47 @@ article{
     font-size: 12px;
     line-height: 150%;
     color: var(--color-1);
+}
+/******************************************/
+/************** footer *******************/
+div{
+   
+}
+.footer__nav{
+    background-color: var(--color-1);
+    display: flex;
+    position: sticky;
+    bottom: 32px;
+    z-index: 100;
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
+    height: 60px;
+    border-radius: 44px;
+    padding: 10px 16px;
+    /* overflow: hidden; */
+    /* gap: 45px; */
+}
+.footer__nav::after {
+    content: '';
+    position: fixed;
+    top: calc(100% - 32px);
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: white;
+    z-index: -1;
+    /* border-radius: 44px; */
+}
+.footer__nav a{
+    background-color: var(--color-12);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.footer__nav a img{
+
 }
