feat: :construction: Maquetacion del HTML
Se ha completado el HTML y un estilo general

--- a/css/variables.css
+++ b/css/variables.css
@@ -7,6 +7,10 @@
     --color-6: #347EFB;
     --color-7: #CAC9C9;
     --color-8: #878787;
+    --color-9: #FFFFFF;
+    --color-10: #DFDEDE;
+    --color-11: #FDFDFD;
+    --color-12: #FFFFFF05;
 }
 @font-face {
     font-family: "EncodeSans-Regular";
