--- a/css/variables.css
+++ b/css/variables.css
@@ -11,6 +11,7 @@
     --color-10: #DFDEDE;
     --color-11: #FDFDFD;
     --color-12: #FFFFFF05;
+    --color-13: #29252610;
 }
 @font-face {
     font-family: "EncodeSans-Regular";
