--- a/views/detail.html
+++ b/views/detail.html
@@ -11,7 +11,7 @@
         <img src="../storage/img/vestido-01.jpg" alt="vestido-mujer">
         <div class="img__btns">
             <a href="#"><img src="../storage/img/arrow-left.png" alt=""></a>
-            <a href="#"><img src="../storage/img/heart-full.png" alt=""></a>
+            <a href="#"><img src="../storage/img/heart-full-black.png" alt=""></a>
         </div>
     </header>
     <main>
