feat: :construction: Selectores terminados

--- a/css/variables.css
+++ b/css/variables.css
@@ -12,6 +12,8 @@
     --color-11: #FDFDFD;
     --color-12: #FFFFFF05;
     --color-13: #29252610;
+    --color-13: #F6F6F6;
+    --color-14: #433F40;
 }
 @font-face {
     font-family: "EncodeSans-Regular";
