--- a/css/detail.css
+++ b/css/detail.css
@@ -95,6 +95,7 @@ section{
     font-size: 12px;
     line-height: 120%;
     color: var(--color-6);
+    padding-left: 3px;
 }
 .product__amount {
     display: flex;
@@ -127,13 +128,111 @@ section{
 }
 .product__description{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    width: 84%;
+    width: 85%;
+}
+.product__description summary{
+    font-family: "EncodeSans-Regular";
+    font-size: 12px;
+    line-height: 150%;
+    color: var(--color-8);
 }
 .product__description p{
     font-family: "EncodeSans-Regular";
     font-size: 12px;
     line-height: 150%;
     color: var(--color-8);
+}
+details>summary {
+    list-style: none;
+  }
+  summary::after {
+    content: '..Read more';
+    color: var(--color-1);
+    font-family: "EncodeSans-semiBold";
+    font-size: 14px;
+    line-height: 150%;
+    cursor: pointer;
+  }
+  details[open] summary:after {
+    content: " ";
+  }
+hr{
+    background-color: var(--color-13);  
+    border: 0;
+    height: 1px;
+}
+.product__details {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 16px 0 24px 0;
+}
+.product__size {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.product__size h6{
+    font-family: "EncodeSans-Bold";
+    font-size: 12px;
+    line-height: 150%;
+    color: var(--color-5);
+}
+.sizes {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 8px;
+}
+.sizes a{
+    font-family: "EncodeSans-Regular";
+    font-size: 12px;
+    line-height: 150%;
+    color: var(--color-1);
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 26px;
+    height: 26px;
+    border-radius: 32px;
+    border: solid 1px var(--color-10);
+}
+.sizes a:nth-child(3){
+    color: var(--color-9);
+    background: black;
+}
+.product__color {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.product__color h6{
+    font-family: "EncodeSans-Bold";
+    font-size: 12px;
+    line-height: 150%;
+    color: var(--color-5);
+}
+.product__color a{
+    width: 26px;
+    height: 26px;
+    border-radius: 32px;
+}
+.product__color a:nth-child(1){
+    background: var(--color-2);
+}
+.product__color a:nth-child(2){
+    background: var(--color-14);
+}
+.product__color a:nth-child(3){
+    background: var(--color-5);
+}
+.colors {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 8px;
 }
