--- a/views/detail.html
+++ b/views/detail.html
@@ -31,8 +31,12 @@
             </div>
         </section>
         <section class="product__description">
-            <p>Its simple and elegant shape makes it perfect for those of you who like minimalist clothes.  It seamlessly blends comfort with style, offering a versatile piece that can be dressed up or down.</p>
+            <details>
+                <summary>Its simple and elegant shape makes it perfect for those of you who like minimalist clothes.  It seamlessly blends comfort </summary>
+                <p>with style, offering a versatile piece that can be dressed up or down.</p>
+            </details>
         </section>
+        <hr>
         <section class="product__details">
             <div class="product__size">
                 <h6>Choose Size</h6>
@@ -44,7 +48,7 @@
                 </div>
             </div>
             <div class="product__color">
-                <h6>Choose Color</h6>
+                <h6>Color</h6>
                 <div class="colors">
                     <a href="#"></a>
                     <a href="#"></a>
