feat: :lipstick: Checkout terminado

--- a/views/checkout.html
+++ b/views/checkout.html
@@ -1,62 +1,62 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../storage/img/icon-nav.png" type="image/png">
     <title>Checkout</title>
     <link rel="stylesheet" href="../css/checkout.css">
 </head>
 <body>
     <header>
-        <a href="detail.html"><img src="../storage/img/arrow-left.png" alt="Back"></a>
+        <a href="views/detail.html"><img src="../storage/img/arrow-left.png" alt="Back"></a>
         <p>Checkout</p>
         <a href="#"><img src="../storage/img/menu.png" alt="Menu"></a> 
     </header>
     <main>
         <section class="orders">
             <article class="order">
-                <!-- <img src="../storage/img/camisa-h-01.jpg" alt=""> -->
+                <img src="../storage/img/camisa-h-01.jpg" alt="">
                 <div class="order__info">
                     <div class="order__description">
                         <div class="order__name">
                             <p>Basic White T-Shirt</p>
                             <p>T-shirt modern</p>
                         </div>
-                            <div class="order__price">
-                                <p>$212.99</p>
-                            </div>
+                        <div class="order__price">
+                            <p>$212.99</p>
                         </div>
-                        <div class="order__item">
-                            <img src="../storage/img/menu-dots.png" alt="">
-                            <div class="order__amount">
-                                <a href="#"><img src="../storage/img/minus.png" alt="minus-icon"></a>
-                                <label>4</label>
-                                <a href="#"><img src="../storage/img/add.png" alt="plus-icon"></a>
-                            </div>
+                    </div>
+                    <div class="order__item">
+                        <img src="../storage/img/menu-dots.png" alt="">
+                        <div class="order__amount">
+                            <a href="#"><img src="../storage/img/minus.png" alt="minus-icon"></a>
+                            <label>4</label>
+                            <a href="#"><img src="../storage/img/add.png" alt="plus-icon"></a>
                         </div>
                     </div>
                 </div>
             </article>
             <hr>
             <article class="order">
-                <!-- <img src="../storage/img/vestido-01.jpg" alt=""> -->
+                <img src="../storage/img/vestido-01.jpg" alt="">
                 <div class="order__info">
                     <div class="order__description">
                         <div class="order__name">
                             <p>Blue King Dress</p>
                             <p>Dress elegant</p>
                         </div>
-                            <div class="order__price">
-                                <p>$162.99</p>
-                            </div>
+                        <div class="order__price">
+                            <p>$162.99</p>
                         </div>
-                        <div class="order__item">
-                            <img src="../storage/img/menu-dots.png" alt="">
-                            <div class="order__amount">
-                                <a href="#"><img src="../storage/img/minus.png" alt="minus-icon"></a>
-                                <label>1</label>
-                                <a href="#"><img src="../storage/img/add.png" alt="plus-icon"></a>
-                            </div>
+                    </div>
+                    <div class="order__item">
+                        <img src="../storage/img/menu-dots.png" alt="">
+                        <div class="order__amount">
+                            <a href="#"><img src="../storage/img/minus.png" alt="minus-icon"></a>
+                            <label>1</label>
+                            <a href="#"><img src="../storage/img/add.png" alt="plus-icon"></a>
                         </div>
                     </div>
                 </div>
