--- a/css/checkout.css
+++ b/css/checkout.css
@@ -8,6 +8,7 @@ body{
     background-color: var(--color-9);
     padding: 24px;
 }
+/************* Header *****************/
 header{
     display: flex;
     justify-content: space-between;
@@ -33,8 +34,209 @@ header p{
     line-height: 140%;
     color: var(--color-5);
 }
+/***************************************/
+/************* Main *******************/
+section{
+    
+}
 .orders{
     display: flex;
     flex-direction: column;
     padding: 24px 0;
+    gap: 24px;
+}
+.order{
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    width: 100%;
+}
+.order img{
+    width: 97px;
+    height: 70px;
+    object-fit: cover;
+    border-radius: 14px;
+    object-position: top;
+}
+.order__info{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.order__description{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+.order__name{
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+}
+.order__name p{
+
+}
+.order__name p:first-child{
+    font-family: "EncodeSans-SemiBold";
+    font-size: 14px;
+    color: var(--color-5);
+}
+.order__name p:last-child{
+    font-family: "EncodeSans-Regular";
+    font-size: 10px;
+    color: var(--color-2);
+}
+.order__price{
+    font-family: "EncodeSans-SemiBold";
+    font-size: 14px;
+    color: var(--color-1);
+}
+.order__item{
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    width: 79px;
+    gap: 20px;
+}
+.order__item img{
+    width: 24px;
+    height: 24px;
+    object-fit: cover;
+}
+.order__amount{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 79px;
+    gap: 12px;
+}
+.order__amount a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 24px;
+    height: 24px;
+    border-radius: 100%;
+    border: 1px solid var(--color-10);
+}
+.order__amount a img{
+    width: 16px;
+    height: 16px;
+    object-fit: cover;
+}
+.order__amount label{
+    font-family: "EncodeSans-SemiBold";
+    font-size: 14px;
+    line-height: 120%;
+    color: var(--color-1);
+}
+hr{
+    background-color: var(--color-13);  
+    border: 0;
+    height: 1px;
+}
+hr:nth-child(2){
+    margin-bottom: 16px;
+}
+/***************************************/
+.ship__info{
+    display: flex;
+    padding-top: 24px;
+    flex-direction: column;
+    gap: 16px;
+}
+.ship__info > p{
+    font-family: "EncodeSans-SemiBold";
+    font-size: 14px;
+    line-height: 140%;
+    color: var(--color-5);
+}
+.card{
+    background-color:var(--color-4);
+    display: flex;    
+    border-radius: 8px;
+    justify-content: space-between;
+    padding: 16px 20px;
+}
+.card img{
+    width: 20px;
+    height: 20px;
+    align-self: center;
+    object-fit: cover;
+}
+.card__info{
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+.card__info img{
+    width: 45px;
+    height: 30px;
+    border-radius: 4px;
+    margin-right: 8px;
+    object-fit: cover;
+}
+.card__info p{
+    font-size: 14px;
+    line-height: 140%;
+    color: var(--color-1);
+}
+.card__info p:nth-child(2){
+    font-family: "EncodeSans-SemiBold";
+}
+.card__info p:last-child{
+    font-family: "EncodeSans-Regular";
+}
+/***************************************/
+.price{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-top: 8px;
+}
+.price div{
+    display: flex;
+    justify-content: space-between;
+}
+.price p:first-child{
+    font-family: "EncodeSans-Regular";
+    font-size: 14px;
+    color: var(--color-1);
+}
+.price p:last-child{
+    font-family: "EncodeSans-SemiBold";
+    font-size: 14px;
+    color: var(--color-15);
+}
+.sub__total{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 8px;
+}
+.sub__total p:first-child{
+    font-family: "EncodeSans-Regular";
+    font-size: 14px;
+    color: var(--color-1);
+}
+.sub__total p:last-child{
+    font-family: "EncodeSans-SemiBold";
+    font-size: 14px;
+    color: var(--color-15);
+}
+/****************************************/
+footer{
+    background-color: var(--color-5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 45px;
+    padding: 20px 16px;
+    margin-top:44px;
+}
+footer a{
+    font-family: "EncodeSans-Bold";
+    font-size: 14px;
+    line-height: 140%;
+    color:var(--color-11);
+    text-decoration: none;
 }
