--- a/css/variables.css
+++ b/css/variables.css
@@ -14,6 +14,7 @@
     --color-13: #29252610;
     --color-13: #F6F6F6;
     --color-14: #433F40;
+    --color-15: #171516;
 }
 @font-face {
     font-family: "EncodeSans-Regular";
