--- a/css/variables.css
+++ b/css/variables.css
@@ -11,6 +11,10 @@
     --color-10: #DFDEDE;
     --color-11: #FDFDFD;
     --color-12: #FFFFFF05;
+    --color-13: #29252610;
+    --color-13: #F6F6F6;
+    --color-14: #433F40;
+    --color-15: #171516;
 }
 @font-face {
     font-family: "EncodeSans-Regular";
