--- a/views/detail.html
+++ b/views/detail.html
@@ -59,7 +59,7 @@
         </section>
         <section class="product__buy">
             <img src="../storage/img/shopping-cart.png" alt="">
-            <a href="#">
+            <a href="checkout.html">
                 <p>Add to Cart | $162.99</p>
                 <del>$190.99</del>
             </a>
